--- a/assign 6/style2.css
+++ b/assign 6/style2.css
@@ -1,36 +1,35 @@
-.container {
-    width:100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 35px 35px 30px 400px 325px 30px 25px 20px;
-}
+/*.container {*/
+/*width:100%;*/
+/*display: grid;*/
+/*grid-template-columns: repeat(3, 1fr);*/
+/*grid-template-rows: 35px 35px 30px 400px 325px 30px 25px 20px;*/
+/*}*/
 /*from freecodecamp*/
 
-.header{
-    background:#FF5959;
+.header {
+    background: #ff5959;
     grid-row: 1/3;
     grid-column: 1/-1;
 }
 
-.nav1 input[type=text]{
+.nav1 input[type="text"] {
     padding: 5px;
     border: none;
     margin-top: 5px;
-    margin-right:10px;
+    margin-right: 10px;
     font-size: 12px;
     color: white;
-    z-index:1;
+    z-index: 1;
 }
 
-#menu{
-    padding-top:10px;
+#menu {
+    padding-top: 10px;
 }
 
 .nav1 {
-    float: left;
-    grid-row:1/2;
-    grid-column:3/4;
-    display:inline;
+    grid-row: 1/2;
+    grid-column: 3/4;
+    display: inline;
 }
 
 .nav1 ul {
@@ -38,56 +37,52 @@
     font-size: 15px;
     list-style-type: none;
     text-decoration: none;
-    display:inline;
+    display: inline;
 }
 
-.nav2{
-float: left;
-
-  margin-left: 350px;
-  padding: 0;
-  /*grid-row:2/3;*/
-  /*grid-column: 2/4;*/
-  /*color: white;*/
-  z-index:1;
+.nav2 {
+    /*float: left;*/
+    margin-left: 350px;
+    padding: 0;
+    /*grid-row:2/3;*/
+    /*grid-column: 2/4;*/
+    /*color: white;*/
+    z-index: 1;
 }
 
-.nav2 li{
+.nav2 li {
     text-decoration: none;
-    display:inline;
-    grid-row:2/3;
+    display: inline;
+    grid-row: 2/3;
     grid-column: 2/4;
 }
 
-
-.logo{
-    float:left;
-    width:12%;
+.logo {
+    float: left;
+    width: 12%;
     /*grid-area: span"h1"/"b";*/
 }
 
-
-
-.bluebar{
-    background:#4F9DA6;
+.bluebar {
+    background: #4f9da6;
     grid-row: 3/4;
     grid-column: 1/-1;
     /* grid-area:b;*/
 }
 
-.hero{
+.hero {
     grid-row: 4/5;
     grid-column: 1/-1;
     /*grid-area: i;*/
 }
 
-.hero-text > button{
-    text-align:center;
+.hero-text > button {
+    text-align: center;
     position: absolute;
     justify-content: center;
-    color:white;
-    background-color: #FFAD5A;
-    z-index:1;
+    color: white;
+    background-color: #ffad5a;
+    z-index: 1;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -101,38 +96,34 @@ float: left;
 /*img{
     width: 100%
 }*/
-#heroimg{
-    width:100%;
-    height:400px;
+#heroimg {
+    width: 100%;
+    height: 400px;
     object-fit: cover;
     background-image: url(img/hero_image_buns_SMALL.jpg);
     z-index: 0;
 }
 
-
-.featurerecipe ul{
+.featurerecipe ul {
     /*align-content: center;*/
     /*width:33%;*/
     /*grid-row:4/5;*/
     /*grid-column:1/4;*/
     /*float: left;*/
-    display:inline;
-    text-decoration:none;
+    display: inline;
+    text-decoration: none;
 }
 
-
-
-.circle-image{
+.circle-image {
     border-radius: 50%;
     width: 160px;
     height: 160px;
-    object-fit:cover;
+    object-fit: cover;
 }
 
-
-.subbar{
-    background:#4F9DA6;
-    grid-row:6/7;
+.subbar {
+    background: #4f9da6;
+    grid-row: 6/7;
     grid-column: 1/-1;
     color: white;
     font-family: lustria;
@@ -140,53 +131,48 @@ float: left;
     /*grid-area:s;*/
 }
 
-.subbar button{
+.subbar button {
     font-family: lustria;
     font-size: 18px;
-    color: #4F9DA6
+    color: #4f9da6;
     width: 300px;
-    height:30px;
+    height: 30px;
 }
 
-
-.bottom{
-    display:grid;
-    grid-row:7/8;
-    grid-column:1/-1;
+.bottom {
+    display: grid;
+    grid-row: 7/8;
+    grid-column: 1/-1;
     font-family: lustria;
     padding-right: 20px;
-    color: #FF5959;
+    color: #ff5959;
     /* grid-area:r;*/
 }
 
-.copyright{
+.copyright {
     background: white;
-    grid-row:8/9;
+    grid-row: 8/9;
     grid-column: 1/-1;
     color: black;
     /*grid-area:c;*/
 }
 
-
-.bottom ul{
-  list-style-type: none;
-  text-decoration: none;
-  margin: 0;
-  padding-right: 180px;
-  background: #FEE666;
-  color: #FF5959;
-  text-align: right;
-  background color: span 1/-1;
+.bottom ul {
+    list-style-type: none;
+    text-decoration: none;
+    margin: 0;
+    padding-right: 180px;
+    background: #fee666;
+    color: #ff5959;
+    text-align: right;
+    background-color: span 1/-1;
 }
 
-
-.bottom li{
-display: inline;
-grid-row:7/8;
-grid-column:3/4;
-color: #FF5959;
-
-
+.bottom li {
+    display: inline;
+    grid-row: 7/8;
+    grid-column: 3/4;
+    color: #ff5959;
 }
 
 .nav1 {
@@ -194,47 +180,45 @@ color: #FF5959;
     text-decoration: none;
     list-style-type: none;
     font-size: 25px;
-    grid-row:1/2;
-    grid-column:3/4;
+    grid-row: 1/2;
+    grid-column: 3/4;
 }
 
-.nav1 a:hover{
+.nav1 a:hover {
     color: black;
 }
 
-#search{
+#search {
     width: 20px;
     height: 20px;
 }
 
-
-
 /*Blackberry Cinnamon Bun Page*/
 
 /*#showcase{*/
-    /*border: 2px solid blue;*/
+/*border: 2px solid blue;*/
 /*}*/
 
-.content{
-    display:block;
-    font-size:17px;
-    color:black;
+.content {
+    display: block;
+    font-size: 17px;
+    color: black;
 }
 
-#showcaseleft{
-    display:inline-block;
+#showcaseleft {
+    display: inline-block;
     width: 600px;
     height: 400px;
     object-fit: cover;
     vertical-align: top;
 }
 
-#showcaseright{
+#showcaseright {
     display: inline-block;
     width: 500px;
     height: 500px;
     vertical-align: top;
-    margin-left:30px;
+    margin-left: 30px;
     padding: 10px;
 }
 
@@ -244,232 +228,170 @@ color: #FF5959;
     color: black;
 }
 
-.bb{
+.bb {
     font-family: lustria;
     font-size: 50px;
     color: blue;
 }
 
-.bbprice{
+.bbprice {
     font-family: lustria;
     font-size: 17px;
     color: blue;
 }
 
-#p2{
+#p2 {
     margin-top: 50px;
-
 }
 
-.h3{
+.h3 {
     font-family: lustria;
     font-size: 25;
-    color: #4F9DA6;
+    color: #4f9da6;
     margin-top: 25px;
 }
 
 .container3 {
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 35px 35px 30px;
 }
 
-#cartbtn{
+#cartbtn {
     color: white;
-    background-color: #F9AB5D;
-    font-size:34;
+    background-color: #f9ab5d;
+    font-size: 34;
     font-family: helvetica;
     justify-content: center;
 }
 
 /*Shopping Cart Page*/
 
-.carthead{
-    display:flex;
+.carthead {
+    display: flex;
     width: 100%;
     text-align: center;
-    padding-top:1%;
+    padding-top: 1%;
 }
 
-p{
+p {
     font-family: helvetica;
-    color: #4F9DA6;
+    color: #4f9da6;
     font-size: 17px;
     align-content: left;
-    padding-right:40px;
-    padding-left:40%;
-    padding-bottom:20px;
+    padding-right: 40px;
+    padding-left: 40%;
+    padding-bottom: 20px;
 }
 
-#scart{
-    height:5%;
-    width:5%;
+#scart {
+    height: 5%;
+    width: 5%;
 }
 
-#bbproduct{
-    height:200px;
-    width:200px;
-    padding-left:100px;
+#bbproduct {
+    height: 200px;
+    width: 200px;
+    padding-left: 100px;
     object-fit: cover;
 }
 
-.bb{
-    color:#4F9DA6;
-    font-family:helvetica;
-    font-size:35px;
+.bb {
+    color: #4f9da6;
+    font-family: helvetica;
+    font-size: 35px;
 }
 
-.bbprice{
-    color:#4F9DA6;
-    font-family:25px;
-    font-family:lustria;
-}
-
-.bodycontent{
-    display:flex;
-    padding-top:40px;
-}
-.rightcart{
-    width:25%;
-    padding-left:100px;
-    padding-top:10px;
+.bbprice {
+    color: #4f9da6;
+    font-family: 25px;
     font-family: lustria;
-    font-size:25px;
-    color: #4F9DA6;
 }
 
-#p4{
-    display:flex;
-    justify-content:flex-end;
-    margin-left:200px;
-    margin-top:200px;
+.bodycontent {
+    display: flex;
+    padding-top: 40px;
+}
+.rightcart {
+    width: 25%;
+    padding-left: 100px;
+    padding-top: 10px;
+    font-family: lustria;
+    font-size: 25px;
+    color: #4f9da6;
 }
 
-#proceed{
-    display:flex;
-    width:auto;
-    height:40px;
-    background-color:#4F9DA6;
-    color:white;
-    font-family:helvetica bold;
-    font-size:34px;
-    margin-top:75px;
-    margin-left:550px;
-
+#p4 {
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 200px;
+    margin-top: 200px;
 }
 
-.tbx{
-    background-color:#BAB3B3;
-    color: #0000000;
+#proceed {
+    display: flex;
+    width: auto;
+    height: 40px;
+    background-color: #4f9da6;
+    color: white;
+    font-family: helvetica bold;
+    font-size: 34px;
+    margin-top: 75px;
+    margin-left: 550px;
 }
 
-#carticon{
-    height:40px;
-    width:40px;
+.tbx {
+    background-color: #bab3b3;
+    color: #000000;
+}
+
+#carticon {
+    height: 40px;
+    width: 40px;
     padding-left: 200px;
 }
 
-#nutrition button{
+#nutrition button {
     height: 10px;
-    width:50px;
+    width: 50px;
 }
 /*MENU  PAGE*/
 
 .container2 {
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 35px 35px 30px 400px 400px 30px 25px;
     /*border: 7px solid #000;*/
 }
 
-.imgdetail{
-    height:200px;
+.imgdetail {
+    height: 200px;
     width: 200px;
     object-fit: cover;
 }
 
-.menurow1{
-    margin-left:300px;
-    display:inline-flex;
-    padding:15px;
-    justify-content: space-between;
-}
-
-.menurow2{
-    margin-left:300px;
-    display:inline-flex;
-    padding:15px;
-    justify-content: space-between;
-}
-
-/*.menurow1{*/
-    /*justify-content:grid-column-start;*/
-/*}*/
-
-/*.menurow2{*/
-    /*justify-content:grid-column-start;*/
-/*}*/
-/*#menurow1{
-    display:inline-flex;
-    grid-row:4/5;
-    grid-column:2/span 2;
-    align-content: right;
-    padding-left:20px;
-    padding-right:20px;
-}*/
-
-/*#menurow2{
+.menurow1 {
+    margin-left: 300px;
     display: inline-flex;
-    grid-row:5/6;
-    grid-column:2/span 2;
-    align-content: right;
-    padding-left:20px;
-    padding-right:20px;
-/*}*/
+    padding: 15px;
+    justify-content: space-between;
+}
 
-#mnav1{
-    display:inline-flex;
+.menurow2 {
+    margin-left: 300px;
+    display: inline-flex;
+    padding: 15px;
+    justify-content: space-between;
+}
+
+#mnav1 {
+    display: inline-flex;
     text-decoration: none;
 }
 
-/*#og{*/
-    grid-row:4/5;
-    grid-column: 2/3;
-    padding-right: 30px;
-    padding-top:20px;
-}
-
-/*#bb{*/
-    grid-row:4/5;
-    grid-column:3/4;
-    padding-right:30px;
-    padding-top:20px;
-}
-
-/*#walnut{*/
-    grid-row:4/5;
-    grid-column:4/5;
-    padding-right:30px;
-    padding-top:20px;
-}
-
-/*#oggf{*/
-    grid-row:5/6;
-    grid-column:2/3;
-    padding-right:30px;
-    padding-top:20px;
-}
-
-/*#pspice{*/
-    grid-row:5/6;
-    grid-column:3/4;
-    padding-right:30px;
-    padding-top:20px;
-}
-
-/*#cp{*/
-    grid-row:5/6;
-    grid-column:4/5;
-    padding-right:30px;
-    padding-top:20px;
+#remove {
+    margin-left: 590px;
+    font-family: lustria;
+    color: black;
+    margin-top: 20px !important;
 }
